# simple_engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_project.bat  generate_project.py  premake5.lua
Builds/: CMakeCache.txt  cmake_install.cmake
engine/src/: main.cpp  utils.h
engine/src/application/: engine.cpp  engine.h  engine.ixx  engine_context.h  engine_context.ixx
engine/src/application/core/: event_interface.h  event_interface.ixx  manager_interface.h  manager_interface.ixx  manager_interface.ixx.txt  system_interface.cpp  system_interface.h  system_interface.ixx
engine/src/application/core/scene/: component.h  scene.cpp  scene.h
engine/src/application/core/utils/: engine_assert.h  engine_assert.ixx
engine/src/application/editor/: component_drawer.h  editor.cpp  editor.h  editor.ixx  editor_context.h  editor_system.cpp  editor_system.h  imgui_helpers.cpp  imgui_helpers.h  imgui_integration.cpp  imgui_integration.h  imgui_integration.ixx  imgui_system.cpp  imgui_system.h
engine/src/application/editor/panels/: entity_panel.cpp  entity_panel.h  scene_panel.cpp  scene_panel.h
engine/src/application/managers/: renderer_manager.cpp  renderer_manager.h  renderer_manager.ixx  virtual_fs.cpp  virtual_fs.h  virtual_fs.ixx  window_manager.cpp  window_manager.h  window_manager.ixx
engine/src/application/managers/events/: event_interface.h  events_manager.cpp  events_manager.h  events_types.h
engine/src/application/renderer/: device.cpp  device.h  device.ixx  device.ixx.txt  renderer.cpp  renderer.h  renderer.ixx  texture.cpp  texture.h  texture.ixx  texture.ixx.txt
engine/src/application/system/: window_system.cpp  window_system.h  window_system.ixx
engine/src/renderer/: device.cpp  device.h  renderer.cpp  renderer.h  texture.cpp
engine/third_parties/abseil/absl/base/internal/: sysinfo.cc
engine/third_parties/abseil/absl/container/internal/: raw_hash_set.h
engine/third_parties/abseil/absl/flags/: parse.cc
engine/third_parties/abseil/absl/synchronization/: mutex.cc
engine/third_parties/imgui-docking/: imgui.cpp
sandbox/src/: main.cpp  utils.cpp
sandbox/src/application/: engine.cpp  engine.h
sandbox/src/application/core/: system_interface.h
sandbox/src/application/system/: window_system.cpp  window_system.h
sandbox/src/renderer/: device.cpp  device.h  renderer.cpp  renderer.h  texture.cpp  texture.h
shaders/: hello.frag  hello.vert
simple_project/shaders/: example.glsl  hello.vert
